# debb

./: .code-review-graphignore  .env.example  .gitignore  .mcp.json  AGENTS.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
evidence_gate/: pyproject.toml
evidence_gate/evidence_gate/: audit_logger.py  config.py  contracts.py  main.py
evidence_gate/evidence_gate/app/: config.py
evidence_gate/evidence_gate/audit/: audit_logger.py
evidence_gate/evidence_gate/connectors/: auth.py  jira_connector.py  jira_field_mapper.py  metabase_api_spec_loader.py  metabase_connector.py  metabase_param_resolver.py  metabase_template_registry.py  quickwit_connector.py
evidence_gate/tests/: test_audit.py  test_audit_fixes.py  test_auth.py  test_bounds_checker.py  test_content_safety_checker.py  test_contracts.py  test_db_redactor.py  test_debug_report_evidence_store.py  test_evidence_executor.py  test_evidence_request_store.py  test_full_flow_eval.py  test_idempotency.py  test_jira_connector.py  test_jira_field_mapper.py  test_log_redactor.py  test_masked_package_store.py  test_mcp_evidence_tools.py  test_mcp_tools.py  test_metabase_api_spec_loader.py  test_metabase_connector.py  test_metabase_executor.py  test_metabase_param_resolver.py  test_metabase_template_registry.py  test_pii_extractor.py  test_pipeline_state_freshness.py  test_quickwit_connector.py  test_raw_evidence_store.py  test_real_jira_connector.py  test_redaction.py  test_report_reviewer.py  test_request_pipeline.py  test_schema_checker.py  test_sessions.py  test_storage.py  test_submit_report.py
(+102 files in other folders)
